<resources>
    <string name="app_name">To Do</string>
    <string name="yes">Sim</string>
    <string name="no">Não</string>

    <string name="january">Janeiro</string>
    <string name="february">Fevereiro</string>
    <string name="march">Março</string>
    <string name="april">Abril</string>
    <string name="may">Maio</string>
    <string name="june">Junho</string>
    <string name="july">Julho</string>
    <string name="august">Agosto</string>
    <string name="september">Setembro</string>
    <string name="october">Outubro</string>
    <string name="november">Novembro</string>
    <string name="december">Dezembro</string>

    <string name="yesterday">Ontem</string>
    <string name="today">Hoje</string>
    <string name="tomorrow">Amanhã</string>
    <string name="past_month">Mês passado</string>
    <string name="next_month">Mês que vem</string>
    <string name="past_year">Ano passado</string>
    <string name="next_year">Ano que vem</string>
    <string name="day_concat_with_number">Dia %1$s</string>

    <!-- SPLASH SCREEN -->
    <string name="made_by_lucas_moro">by Lucas Moro</string>
    <!-- SPLASH SCREEN -->

    <!-- LIST TASK SCREEN -->
    <string name="popup_menu_item_edit">Editar</string>
    <string name="popup_menu_item_delete">Excluir</string>
    <string name="tasks_text">Tarefas</string>
    <string name="task_title_item">Título da tarefa</string>
    <string name="tasks_successfully_deleted">Tarefas excluídas com sucesso!</string>
    <string name="tasks_failure_on_delete">Erro ao excluir as tarefas. Por favor, tente novamente mais tarde!</string>
    <string name="task_failure_on_get_all">Erro ao carregar as tarefas. Por favor, tente novamente mais tarde!</string>
    <string name="you_dont_have_a_task_yet">Oops! Você ainda não possui nenhuma tarefa!</string>
    <string name="description_not_informed">Não informada</string>
    <string name="delete_selected_tasks">Excluir tarefas selecionadas</string>
    <!-- LIST TASK SCREEN -->

    <!-- CONFIRMATION DELETE SELECTED TASKS DIALOG -->
    <plurals name="delete_selected_tasks_dialog_title">
        <item quantity="one">Excluir esta tarefa?</item>
        <item quantity="other">Excluir %d tarefas?</item>
    </plurals>
    <plurals name="delete_selected_tasks_dialog_body_message">
        <item quantity="one">Essa ação removerá a tarefa selecionada sem que haja opção de recuperação. Você tem certeza?</item>
        <item quantity="other">Essa ação removerá as %d tarefa selecionadas sem que haja opção de recuperação. Você tem certeza?</item>
    </plurals>
    <!-- CONFIRMATION DELETE SELECTED TASKS DIALOG -->

    <!-- CREATE/EDIT/INFO TASK SCREEN -->
    <string name="create_task">Criar Tarefa</string>
    <string name="title_hint">Título</string>
    <string name="description_hint">Descrição (opcional)</string>
    <string name="date_hint">Data</string>
    <string name="hour_hint">Hora</string>
    <string name="btn_cancel">Cancelar</string>
    <string name="edit_task">Editar Tarefa</string>
    <string name="task_failure_on_delete">Erro ao excluir a tarefa. Por favor, tente novamente mais tarde!</string>
    <string name="task_successfully_deleted">Tarefa excluída com sucesso!</string>
    <string name="fill_all_required_fields">Preencha todos os campos!</string>
    <string name="task_information">Informações da Tarefa</string>
    <string name="description_text">Descrição</string>
    <string name="required_field">* Campo obrigatório</string>
    <string name="task_successfully_edited">Tarefa editada com sucesso!</string>
    <string name="task_successfully_created">Tarefa criada com sucesso!</string>
    <string name="task_failure_on_create">Erro ao criar a tarefa. Por favor, tente novamente mais tarde!</string>
    <string name="task_failure_on_update">Erro ao editar a tarefa. Por favor, tente novamente mais tarde!</string>
    <!-- CREATE/EDIT TASK SCREEN -->

</resources>